--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-Flask==2.0.3
-Flask-SQLAlchemy==2.5.1
-Werkzeug==2.0.3
-pandas==1.3.3
-openpyxl==3.0.10
-unidecode==1.3.4
-gunicorn==20.1.0
-numpy==1.23.5
-gcc
-g++
-python3-dev
+flask
+flask_sqlalchemy
+pandas
+werkzeug
+openpyxl
+unidecode
+sqlalchemy
